--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,67 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+
+body {
+	line-height: 1;
+}
+
+ol, ul {
+	list-style: none;
+}
+
+blockquote, q {
+	quotes: none;
+}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* Main container */
+
 .container {
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 1fr 4fr;
+    grid-template-rows: 1fr 3fr;
 }
 
 /* Fonts */
-
-.logo {
-    font-family: 'Roboto', sans-serif;
-    font-size: 22px;
-    font-weight: 700;
-}
-
-.first-list,
-.second-list {
-    list-style-type: none;
-    font-family: 'Roboto', sans-serif;
-    font-size: 18px;
-    font-weight: 600;
-}
 
 .name,
 .buttons,
@@ -28,56 +72,97 @@
     font-weight: 700;
 }
 
-.project-title {
-    font-family: 'Roboto', sans-serif;
-    font-size: 12px;
-    font-weight: 200;
-}
-
 /* Side bar */ 
 
 .side-bar {
+    display: grid;
+    grid-area: 1 / 1 / 3 / 2;
+    grid-template-columns: 1fr 4fr;
+    grid-template-rows: 0.3fr repeat(5, minmax(30px, 40px)) 0.3fr repeat(3, minmax(30px, 40px));
     background-color: #0ea5e9;
     color: #ffffff;
+    padding: 20px;
 }
 
-.logo {
-    display: flex;
-    gap: 10px;
-    padding: 10px;
+.side-bar .logo {
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    font-weight: 700;
+    margin-top: 5px;
+}
+
+.side-bar div {
+    font-family: 'Roboto', sans-serif;
+    font-size: 15px;
+    font-weight: 600;
 }
 
 /* Header */
 
 .header {
     display: grid;
-    grid-column: 2 / 3;
-    grid-template-rows: 1fr 1fr;
-    grid-template-columns: 1fr 1fr;
+    grid-area: 1 / 2 / 2 / 3;
+    grid-template-rows: 1fr 2fr;
+    grid-template-columns: 2fr 1fr;
 }
 
 .search {
+    margin: 20px;
+}
+
+input[type=text] {
     background-color: #e2e8f0;
+    border-radius: 25px;
+    border: none;
+    width: 500px;
+    height: 20px;
+}
+
+.name {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.name div {
+    display: flex;
+    align-self: center;
 }
 
 .buttons {
     display: flex;
     justify-content: space-around;
+}
+
+button {
     background-color: #0ea5e9;
+    border: #ffffff;
+    border-radius: 25px;
+    height: 30px;
+    width: 80px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 600;
+    color: #ffffff;
 }
 
 /* Main content */
 
 .main-content {
     display: grid;
-    grid-column: 2 / 3;
+    grid-area: 2 / 2 / 3 / 3;
     grid-template-columns: 2fr 1fr;
     grid-template-rows: 1fr 1fr;
     background-color: #e2e8f0;
 }
 
-.projects {
+.project-container {
+    display: grid;
     grid-area: 1 / 1 / 3 / 2;
+    grid-template-columns: repeat(auto-fit, 200px);
+}
+
+.project {
+    background-color: #ffffff;
 }
 
 .announcements {
