--- a/styles.css
+++ b/styles.css
@@ -63,13 +63,33 @@ table {
 
 /* Fonts */
 
-.name,
-.buttons,
-.announcements,
-.trending {
+h2 {
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
+    font-weight: 600;
+}
+
+h3 {
     font-family: 'Roboto', sans-serif;
     font-size: 15px;
-    font-weight: 700;
+    font-weight: 600;
+}
+
+h4 {
+    font-family: 'Roboto', sans-serif;
+    font-size: 12px;
+    font-weight: 600;
+}
+
+p {
+    font-family: 'Roboto', sans-serif;
+    font-size: 12px;
+    color: #737373;
+}
+
+.person {
+    font-family: 'Roboto', sans-serif;
+    font-size: 12px;
 }
 
 /* Side bar */ 
@@ -124,9 +144,18 @@ input[type=text] {
     gap: 20px;
 }
 
-.name div {
+.name h3 {
     display: flex;
     align-self: center;
+}
+
+.greeting {
+    display: flex;
+}
+
+.greeting img {
+    display: flex;
+    align-self: flex-start;
 }
 
 .buttons {
@@ -150,7 +179,7 @@ button {
 .main-content {
     display: grid;
     grid-area: 2 / 2 / 3 / 3;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 3fr 1fr;
     grid-template-rows: 1fr 1fr;
     background-color: #e2e8f0;
 }
@@ -159,16 +188,31 @@ button {
     display: grid;
     grid-area: 1 / 1 / 3 / 2;
     grid-template-columns: repeat(auto-fit, 200px);
+    gap: 20px;
+    margin: 20px;
 }
 
 .project {
     background-color: #ffffff;
+    border-radius: 5px;
+    padding: 10px;
 }
 
 .announcements {
     grid-area: 1 / 2 / 2 / 3;
+    background-color: #ffffff;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 20px;
 }
 
 .trending {
+    display: grid;
     grid-area: 2 / 2 / 3/ 3;
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: repeat(4, 1fr);
+    background-color: #ffffff;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 20px;
 }
