--- a/styles.css
+++ b/styles.css
@@ -181,7 +181,14 @@ button {
     grid-area: 2 / 2 / 3 / 3;
     grid-template-columns: 3fr 1fr;
     grid-template-rows: 1fr 1fr;
+    box-shadow: 0 -3px 5px rgb(0 0 0 / 0.2);
     background-color: #e2e8f0;
+}
+
+.title-your-projects {
+    grid-area: 1 / 1 / 3 / 2;
+    align-self: flex-start;
+    margin-left: 20px;
 }
 
 .project-container {
@@ -195,24 +202,41 @@ button {
 .project {
     background-color: #ffffff;
     border-radius: 5px;
-    padding: 10px;
+    border-left: solid 5px;
+    border-left-color: #eab308;
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+    padding: 20px;
+}
+
+.title-announcements {
+    grid-area: 1 / 2 / 2 / 3;
+    align-self: flex-start;
+    margin-left: 20px;
 }
 
 .announcements {
     grid-area: 1 / 2 / 2 / 3;
     background-color: #ffffff;
     border-radius: 5px;
-    padding: 10px;
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+    padding: 20px;
     margin: 20px;
+}
+
+.title-trending {
+    grid-area: 2 / 2 / 3 / 3;
+    align-self: flex-start;
+    margin-left: 20px;
 }
 
 .trending {
     display: grid;
-    grid-area: 2 / 2 / 3/ 3;
+    grid-area: 2 / 2 / 3 / 3;
     grid-template-columns: 1fr 3fr;
     grid-template-rows: repeat(4, 1fr);
     background-color: #ffffff;
     border-radius: 5px;
-    padding: 10px;
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+    padding: 20px;
     margin: 20px;
 }
