--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ table {
 
 .container {
     display: grid;
-    grid-template-columns: 1fr 4fr;
+    grid-template-columns: minmax(min-content, 200px) 4fr;
     grid-template-rows: 1fr 3fr;
 }
 
@@ -98,7 +98,7 @@ p {
     display: grid;
     grid-area: 1 / 1 / 3 / 2;
     grid-template-columns: 1fr 4fr;
-    grid-template-rows: 0.3fr repeat(5, minmax(30px, 40px)) 0.3fr repeat(3, minmax(30px, 40px));
+    grid-template-rows: 75px repeat(5, minmax(20px, 30px)) 75px repeat(3, minmax(20px, 30px));
     background-color: #0ea5e9;
     color: #ffffff;
     padding: 20px;
@@ -122,11 +122,8 @@ p {
 .header {
     display: grid;
     grid-area: 1 / 2 / 2 / 3;
+    grid-template-columns: 4fr 1fr;
     grid-template-rows: 1fr 2fr;
-    grid-template-columns: 2fr 1fr;
-}
-
-.search {
     margin: 20px;
 }
 
@@ -134,19 +131,19 @@ input[type=text] {
     background-color: #e2e8f0;
     border-radius: 25px;
     border: none;
-    width: 500px;
+    width: 50%;
     height: 20px;
 }
 
 .name {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     gap: 20px;
 }
 
-.name h3 {
+.name img {
     display: flex;
-    align-self: center;
+    align-self: flex-start;
 }
 
 .greeting {
@@ -160,7 +157,8 @@ input[type=text] {
 
 .buttons {
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-start;
+    gap: 20px;
 }
 
 button {
@@ -179,7 +177,7 @@ button {
 .main-content {
     display: grid;
     grid-area: 2 / 2 / 3 / 3;
-    grid-template-columns: 3fr 1fr;
+    grid-template-columns: 3fr minmax(min-content, 300px);
     grid-template-rows: 1fr 1fr;
     box-shadow: 0 -3px 5px rgb(0 0 0 / 0.2);
     background-color: #e2e8f0;
@@ -215,6 +213,7 @@ button {
 }
 
 .announcements {
+    display: grid;
     grid-area: 1 / 2 / 2 / 3;
     background-color: #ffffff;
     border-radius: 5px;
